Navigation menu: Fix alignment, background color, and font size.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -41,10 +41,10 @@
 		position: fixed;
 		right: 0;
 		top: var(--wp-admin--admin-bar--height, 0);
-		padding-bottom: 24px;
-		padding-left: var(--wp--style--block-gap);
+		padding-top: 70px; /* Magic numbers to center the 24px icon in 117px height. */
 		padding-right: calc(var(--wp--style--block-gap) + var(--wp--custom--alignment--scroll-bar-width));
-		padding-top: 63px;
-		background-color: #1c2024;
+		padding-bottom: 23px; /* Magic numbers to center the 24px icon in 117px height. */
+		padding-left: var(--wp--style--block-gap);
+		background-color: var(--wp--preset--color--black);
 	}
 }
